# nrl-sdk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  nrl-sdk-lib-tests.yaml  nrl-test-data-generator-tests.yaml  python-tests.yaml  release.yaml  release.yml
docs/: index.md  reference.md
lib/: README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt
lib/src/models/: feature_collection.py
lib/tests/: test_feature_collection_model.py
nrl-sdk-lib/: pyproject.toml
nrl-sdk-lib/src/nrl_sdk_lib/converters/: __init__.py  csv_to_geojson.py
nrl-sdk-lib/src/nrl_sdk_lib/models/: __init__.py  feature_collection.py  geometry.py  result.py
nrl-sdk-lib/tests/: test_csv_to_geojson.py  test_feature_collection_model.py  test_result.py
nrl-sdk-lib/tests/files/: 1_bardun.csv  1_bardun.geojson  1_bardun_xlsx.xlsx  1_luftspenn.csv  1_luftspenn.geojson  1_luftspenn_xlsx.xlsx  1_mast.csv  1_mast.geojson  1_mast.xlsx
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/reference/: index.html
site/search/: search_index.json
tools/nrl-test-data-generator/: .gitignore  pyproject.toml
tools/test-data-generator/: .gitignore  README.md  pyproject.toml
tools/test-data-generator/test_data_generator/: cli.py  nrl_generator.py
