[project]
name = "nrl-sdk"
version = "0.1.0"
description = "A top level package for the NRL SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "griffe-fieldz>=0.3.0",
    "griffe-pydantic>=1.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings[python]>=0.29.1",
]

[project.urls]
Homepage = "https://github.com/3lbits/nrl-sdk"
Documentation = "https://3lbits.github.io/nrl-sdk/"
Repository = "https://github.com/3lbits/nrl-sdk.git"
Issues = "https://github.com/3lbits/nrl-sdk/issues"
